# world3

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  example_world3_standard.py  pending_src_en.txt  pyproject.toml  wrangler.jsonc
.github/workflows/: ci.yml  container-smoke.yml  deploy-pages.yml  openapi-validate.yml  publish-core.yml  simulation-check.yml  ui-validate.yml
app/: .gitignore  404.html  agent.json  api.py  cli.py  engine.py  eslint.config.mjs  index.html  llm.txt  models.py  openapi.json  package-lock.json  package.json
app/css/: base.css
app/data/locales/: ar.json  bn.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  hu.json  id.json  it.json  ja.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
app/developers/: index.html
app/js/: charts.js  model-sections.js
app/js/views/: compare.js  explore.js  model.js
app/static/: .gitignore  404.html  agent.json  developers.html  eslint.config.mjs  index.html  manifest.json  openapi.json  package-lock.json  package.json  playwright.config.ts  robots.txt  sitemap.xml  tsconfig.base.json  tsconfig.build.json  tsconfig.cli.json  tsconfig.json  tsconfig.test.json  vitest.config.ts
app/static/css/: base.css  charts.css  components.css  math.css  model.css  variables.css
app/static/data/: standard-run-explore.json
app/static/data/locales/: ar.json  bn.json  de.json  en.json  es.json  fr.json  hi.json  hu.json  id.json  it.json  ja.json  nl.json  pl.json  pt-BR.json  pt-PT.json  ru.json  th.json  tr.json  uk.json  vi.json  zh-CN.json  zh-TW.json
app/static/developers/: index.html
app/static/js/: api.js  app.js  browser-native.js  charts.js  i18n.js  keyboard-nav.js  locale-url.js  math-explainers.js  model-data.js  model-domain.js  model-sections.js  router.js  scenario-controls.js  scenario-state.js  simulation-contracts.js  simulation-provider.js  state.js  ui.js
app/static/js/cli/: browser-native-cli.js  static-server.js
app/static/js/core/: agriculture-sector.js  browser-native-runtime.js  calibration-core.js  capital-sector.js  coupled-capital-resource-runtime.js  index.js  local-simulation-core.js  pollution-sector.js  population-runtime.js  population-sector.js  resource-sector.js  runtime-execution-graph.js  runtime-execution-plan.js  runtime-primitives.js  runtime-state-frame.js  simulation-artifacts.js  simulation-results.js  world3-core.js  world3-equation-dsl.js  world3-keys.js  world3-registry.js  world3-simulation-sectors.js  world3-simulation.js  world3-tables.js
app/static/js/views/: advanced.js  calibrate.js  compare.js  developers.js  explore.js  faq.js  history.js  intro.js  limits-to-growth.js  model.js  scenarios.js  what-is-world3.js
app/static/scripts/: check-locales.js  generate-sitemap.js
app/static/test/: agriculture-sector.test.ts  browser-native-bridge.test.ts  browser-native-runtime.test.ts  calibration-core.test.ts  capital-sector.test.ts  cli-args.test.ts  i18n.test.ts  local-simulation-core.test.ts  locale-url.test.ts  model-domain.test.ts  owid-data.test.ts  pollution-sector.test.ts  population-runtime.test.ts  population-sector.test.ts  resource-sector.test.ts  router-file-links.test.ts  runtime-execution-graph.test.ts  runtime-execution-plan.test.ts  runtime-primitives.test.ts  runtime-state-frame.test.ts  scenario-controls.test.ts  scenario-state.test.ts  simulation-artifacts.test.ts  simulation-contracts.test.ts  simulation-provider.test.ts  simulation-results.test.ts  validation-core.test.ts  worker-api.test.ts  world3-core.test.ts  world3-equation-coverage.test.ts  world3-equation-dsl.test.ts  world3-equation-fidelity.test.ts  world3-registry.test.ts  world3-simulation-sectors.test.ts  world3-simulation.test.ts  world3-tables.test.ts
app/static/test/e2e/: app.spec.ts  (+5 more)
app/static/ts/: browser-native.ts  i18n.ts  model-data.ts  model-domain.ts  scenario-controls.ts  scenario-state.ts  simulation-contracts.ts  simulation-provider.ts
app/test/: charts.test.ts  i18n.test.ts  local-simulation-core.test.ts  scenario-state.test.ts  simulation-artifacts.test.ts  simulation-provider.test.ts  worker-api.test.ts  world3-equation-dsl.test.ts  world3-registry.test.ts  world3-simulation-sectors.test.ts  world3-tables.test.ts
app/test/e2e/: locale-content.spec.ts
app/ts/: browser-native.ts  charts.ts  model-domain.ts  worker.ts
docs/: browser-native-migration-plan.md  openapi.json  world3-model-reference.md
pyworld3/: __init__.py  agriculture.py  capital.py  functions_table_world3.json  pollution.py  population.py  resource.py  specials.py  utils.py  world3.py
pyworld3/adapters/: _entrypoint.py  api.py  cli.py  plotting.py  schemas.py
pyworld3/adapters/owid/: __init__.py  client.py  indicators.py
pyworld3/application/: calibrate.py  ports.py  simulate.py  validate.py
pyworld3/domain/: __init__.py  agriculture.py  capital.py  constants.py  exceptions.py  mappings.py  pollution.py  population.py  requires.py  resource.py  validation.py  world3.py
pyworld3/domain/presets/: comprehensive-policy.toml  doubled-resources.toml  optimistic-technology.toml  population-stability.toml  standard-run.toml
scripts/: generate_openapi.py  sync-core.sh
tests/: test_api.py  test_app_api.py  test_app_cli.py  test_app_engine.py  test_cli.py  test_owid.py  test_plotting.py  test_requires.py  test_sectors.py  test_simulate.py  test_specials.py  test_utils.py
tests/e2e/: conftest.py  test_ui.py
worker/: index.ts
(+28 files in other folders)
